--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -16,4 +16,15 @@
 
     <app-info-pokemon [pokemon]="pokemon"></app-info-pokemon>
   </div>
+
+  <div style="text-align: center; margin-top: 20px">
+    <button (click)="showGuess = !showGuess" class="btn-guess">
+      🎯 Guess the Pokémon
+    </button>
+  </div>
+
+  <!-- Renderizamos el componente Guess si showGuess es true -->
+  @if (showGuess) {
+  <app-guess></app-guess>
+  }
 </body>
