Mejora en las pistas, pero error en mostrar textos incorrectos

--- a/src/app/pages/guess/guess.css
+++ b/src/app/pages/guess/guess.css
@@ -7,8 +7,8 @@
   margin: 20px 0;
 
   img {
-    width: 25%;      
-    image-rendering: pixelated; 
+    width: 25%;
+    image-rendering: pixelated;
     filter: drop-shadow(2px 4px 6px #000);
     transition: filter 0.3s ease-in-out;
 
@@ -17,7 +17,6 @@
     }
   }
 }
-
 
 .input-area {
   display: flex;
@@ -43,7 +42,40 @@
   font-weight: bold;
 }
 
- input::placeholder {
-  color: rgb(252, 252, 252); 
+input::placeholder {
+  color: rgb(252, 252, 252);
   font-style: italic;
+}
+
+.help-button {
+  background-color: #59957e !important;
+  color: white !important;
+  border-radius: 20px;
+  padding: 8px 20px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+  transition: background-color 0.3s ease;
+}
+
+.help-button:hover {
+  background-color: #345749 !important;
+}
+
+.type-icons {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+}
+
+.type-icon {
+  width: 80px;
+  height: auto;
+  border-radius: 6px;
+}
+
+.hints-list {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: center;
+  margin: 1% 1% 1% -6%;
 }
